--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/bcryptjs": "^2.4.6",
-		"@types/better-sqlite3": "^7.6.11",
 		"@types/jsonwebtoken": "^9.0.7",
+		"@types/node-cron": "^3.0.11",
 		"svelte": "^4.2.7",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
@@ -25,7 +25,8 @@
 	"type": "module",
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
-		"better-sqlite3": "^11.3.0",
-		"jsonwebtoken": "^9.0.2"
+		"jsonwebtoken": "^9.0.2",
+		"mariadb": "^3.4.0",
+		"node-cron": "^3.0.3"
 	}
 }
