Fetch substitutions from Elternportal

--- a/.env.template
+++ b/.env.template
@@ -6,3 +6,5 @@ DB_NAME=infoportal
 JWT_ACCESS_SECRET=jfoshuph97sgz4guihgusdhghs4gs4u8hg4usgol
 VAPID_PUBLIC_KEY=BJ74TALEYZzx6T_iVTTz4COgLPxp-hiB8htATd2FChHQ0lxKUNfldvHiCAfxkd6MynIrt1w0m-KXrd_H_l59zoU
 VAPID_PRIVATE_KEY=8ePZz8_gXEjzXpXcUAaenndHwne8e23hRubmjz1x97M
+ELTERNPORTAL_USERNAME=username
+ELTERNPORTAL_PASSWORD=password
