--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@types/bcryptjs": "^2.4.6",
 		"@types/jsonwebtoken": "^9.0.7",
 		"@types/node-cron": "^3.0.11",
+		"@types/web-push": "^3.6.4",
 		"svelte": "^4.2.7",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
@@ -25,8 +26,11 @@
 	"type": "module",
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
+		"fetch-cookie": "^3.1.0",
+		"html5parser": "^2.0.2",
 		"jsonwebtoken": "^9.0.2",
 		"mariadb": "^3.4.0",
-		"node-cron": "^3.0.3"
+		"node-cron": "^3.0.3",
+		"web-push": "^3.6.7"
 	}
 }
